--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/global.css">
+      <link rel="stylesheet" href="fonts/fonts.css">
+      <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
@@ -25,10 +26,10 @@
           </ul>
         </nav>
         <div class="header__logo">
-          <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип">
+          <a href="https://vk.com"><img class="header__logo-image" src="images/logo-black.svg" alt="Логотип"></a>
         </div>
         <address class="address header__address">
-          <a href="tel: +9 999 555 5555">+9 999 555 5555 <br> </a>
+          <a href="tel: +99995555555">+9 999 555 5555 <br> </a>
           <a href="info@sobaka.ge">info@sobaka.ge</a>
           <p> наб.Принсенграхт 263-265.<br> Амстердам</p>
         </address>
@@ -48,7 +49,7 @@
             </div>
             <div class="cover__description">
               <p class="cover__description-text"> Аукцион    вещей,    в    которые    никто    не     верил
-                <button class="bet-button" href="#about">СДЕЛАТЬ СТАВКУ</button>
+                <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
               </p>
             </div>
       </section>
@@ -120,7 +121,7 @@
 
   <footer class="footer">
       <address class="footer__address">
-          <a href="tel: +9 999 555 5555">+9 999 555 5555 <br> </a>
+          <a href="tel: +99995555555">+9 999 555 5555 <br> </a>
           <a href="info@sobaka.ge">info@sobaka.ge</a>
           <p> наб.Принсенграхт 263-265.<br> Амстердам</p>
       </address>
