--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <a href="https://vk.com"><img class="header__logo-image" src="images/logo-black.svg" alt="Логотип"></a>
         </div>
         <address class="address header__address">
-          <a href="tel: +99995555555">+9 999 555 5555 <br> </a>
-          <a href="info@sobaka.ge">info@sobaka.ge</a>
+          <a href="tel:+99995555555">+9 999 555 5555 <br> </a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p> наб.Принсенграхт 263-265.<br> Амстердам</p>
         </address>
       </header>
@@ -121,8 +121,8 @@
 
   <footer class="footer">
       <address class="footer__address">
-          <a href="tel: +99995555555">+9 999 555 5555 <br> </a>
-          <a href="info@sobaka.ge">info@sobaka.ge</a>
+          <a href="tel:+99995555555">+9 999 555 5555 <br> </a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p> наб.Принсенграхт 263-265.<br> Амстердам</p>
       </address>
       <nav class="footer__menu">
